updating numbered examples

--- a/examples/screenshots/form-create.html
+++ b/examples/screenshots/form-create.html
@@ -100,7 +100,7 @@
         </div>
       </div>
       <div class="rs-create-item success">
-        <label class="rs-create-key">Configuration Two</label>
+        <label class="rs-create-key">Configuration Three</label>
         <div class="rs-create-value">
           Configured Item
           <span class="rs-key-divider"></span>
@@ -109,7 +109,7 @@
         </div>
       </div>
       <div class="rs-create-item error">
-        <label class="rs-create-key">Configuration Two</label>
+        <label class="rs-create-key">Configuration Four</label>
         <div class="rs-create-value">
           <span class="rs-quiet">Not Configured</span>
           <span class="rs-key-divider"></span>
