--- a/examples/screenshots/form-create.html
+++ b/examples/screenshots/form-create.html
@@ -26,11 +26,39 @@
             <option>One</option>
             <option>Two</option>
           </select>
+          <span class="rs-help-inline">This is inline help text.</span>
           <span class="rs-validation-inline"><i class="rs-validation-indicator"></i>Everything works!</span>
         </div>
       </div>
       <div class="rs-control-group error">
         <label class="rs-control-label">Three</label>
+        <div class="rs-controls">
+          <select>
+            <option>One</option>
+            <option>Two</option>
+          </select>
+          <span class="rs-help-inline">This is inline help text.</span>
+          <span class="rs-validation-inline"><i class="rs-validation-indicator"></i>Nothing works!</span>
+        </div>
+      </div>
+      <div class="rs-control-group success">
+        <label class="rs-control-label">Four</label>
+        <div class="rs-controls">
+          <label class="rs-radio">
+            <input type="radio" name="three">
+            <strong>A</strong><br>
+            <span class="rs-help-block">A Sub</span>
+          </label>
+          <label class="rs-radio">
+            <input type="radio" name="three">
+            <strong>B</strong>
+            <span class="rs-help-block">B-Sub</span>
+          </label>
+          <span class="rs-validation-block"><i class="rs-validation-indicator"></i>Everything works!</span>
+        </div>
+      </div>
+      <div class="rs-control-group error">
+        <label class="rs-control-label">Five</label>
         <div class="rs-controls">
           <label class="rs-radio">
             <input type="radio" name="three">
@@ -46,14 +74,14 @@
         </div>
       </div>
       <div class="rs-control-group">
-        <label class="rs-control-label">Four</label>
+        <label class="rs-control-label">Six</label>
         <div class="rs-controls">
           <input type="text"> GB
           <span class="rs-help-block">This is some subtext.</span>
         </div>
       </div>
       <div class="rs-control-group">
-        <label class="rs-control-label">Five</label>
+        <label class="rs-control-label">Seven</label>
         <div class="rs-controls">
           <input type="text">
           <select>
@@ -63,13 +91,13 @@
         </div>
       </div>
       <div class="rs-control-group">
-        <label class="rs-control-label">Six</label>
+        <label class="rs-control-label">Eight</label>
         <div class="rs-controls">
           <textarea></textarea>
         </div>
       </div>
       <div class="rs-control-group">
-        <label class="rs-control-label">Seven</label>
+        <label class="rs-control-label">Nine</label>
         <div class="rs-controls-static">Text Content <button class="rs-edit"></button></div>
       </div>
       <div class="rs-control-group error">
