switching form key val to use .rs-detail- list,item,key,value, scoped from .rs-form-create

--- a/examples/screenshots/form-create.html
+++ b/examples/screenshots/form-create.html
@@ -111,34 +111,34 @@
     </fieldset>
     <fieldset>
       <legend>Create Form - Key Value</legend>
-      <div class="rs-create-item">
-        <label class="rs-create-key">Configuration One</label>
-        <div class="rs-create-value">
+      <div class="rs-detail-item">
+        <label class="rs-detail-key">Configuration One</label>
+        <div class="rs-detail-value">
           <span class="rs-quiet">Not Configured</span>
           <span class="rs-key-divider"></span>
           <a href="#">Select Item&hellip;</a>
         </div>
       </div>
-      <div class="rs-create-item">
-        <label class="rs-create-key">Configuration Two</label>
-        <div class="rs-create-value">
+      <div class="rs-detail-item">
+        <label class="rs-detail-key">Configuration Two</label>
+        <div class="rs-detail-value">
           Configured Item
           <span class="rs-key-divider"></span>
           <a href="#">Select Item&hellip;</a>
         </div>
       </div>
-      <div class="rs-create-item success">
-        <label class="rs-create-key">Configuration Three</label>
-        <div class="rs-create-value">
+      <div class="rs-detail-item success">
+        <label class="rs-detail-key">Configuration Three</label>
+        <div class="rs-detail-value">
           Configured Item
           <span class="rs-key-divider"></span>
           <a href="#">Select Item&hellip;</a>
           <span class="rs-validation-inline"><i class="rs-validation-indicator"></i>Everything works!</span>
         </div>
       </div>
-      <div class="rs-create-item error">
-        <label class="rs-create-key">Configuration Four</label>
-        <div class="rs-create-value">
+      <div class="rs-detail-item error">
+        <label class="rs-detail-key">Configuration Four</label>
+        <div class="rs-detail-value">
           <span class="rs-quiet">Not Configured</span>
           <span class="rs-key-divider"></span>
           <a href="#">Select Item&hellip;</a>
