reverting back to normal detail-section-body padding, ditching legends

--- a/examples/screenshots/create-view.html
+++ b/examples/screenshots/create-view.html
@@ -15,9 +15,11 @@
         <div class="rs-page-title">Create Form</div>
       </div>
       <div class="rs-detail-section">
+        <div class="rs-detail-section-header">
+          <div class="rs-detail-section-title">Control Group</div>
+        </div>
         <div class="rs-detail-section-body">
           <fieldset>
-            <legend>Control Group</legend>
             <div class="rs-control-group">
               <label class="rs-control-label">One is a really long label that wraps, but Canon still works</label>
               <div class="rs-controls">
@@ -90,9 +92,11 @@
         </div>
       </div>
       <div class="rs-detail-section">
+        <div class="rs-detail-section-header">
+          <div class="rs-detail-section-title">Key Value</div>
+        </div>
         <div class="rs-detail-section-body">
           <fieldset>
-            <legend>Create Form - Control Group</legend>
             <div class="rs-detail-item">
               <label class="rs-detail-key">Configuration One</label>
               <div class="rs-detail-value">
