Feature 330 - Added rs-plus example to list-table.html
added the rs-plus as a button element to the list-table

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -609,7 +609,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-error"></td>
@@ -622,7 +622,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-warning"></td>
@@ -635,7 +635,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-ok"></td>
@@ -648,7 +648,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-error"></td>
@@ -661,7 +661,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-warning"></td>
@@ -674,7 +674,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
         </tbody>
       </table>
