Feature 330 - Fixed incorrect status class
list-table.html had an incorrect class on the td in one of the example rows.

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -75,7 +75,7 @@
             <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td class="rs-table-icon-list">
+            <td class="rs-table-status-list">
               <ul class="rs-status-list">
                 <li class="rs-status-list-item">
                   <div class="rs-icon-status rs-status-ok"></div>
@@ -133,7 +133,7 @@
             <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td class="rs-table-icon-list">
+            <td class="rs-table-status-list">
               <ul class="rs-status-list">
                 <li class="rs-status-list-item">
                   <div class="rs-icon-status rs-status-ok"></div>
@@ -209,7 +209,7 @@
             <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td class="rs-table-icon-list">
+            <td class="rs-table-status-list">
               <ul class="rs-status-list">
                 <li class="rs-status-list-item">
                   <div class="rs-icon-status rs-status-ok"></div>
@@ -267,7 +267,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td class="rs-table-icon-list">
+            <td class="rs-table-status-list">
               <ul class="rs-status-list">
                 <li class="rs-status-list-item">
                   <div class="rs-icon-status rs-status-ok"></div>
@@ -325,7 +325,7 @@
             <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td class="rs-table-icon-list">
+            <td class="rs-table-status-list">
               <ul class="rs-status-list">
                 <li class="rs-status-list-item">
                   <div class="rs-icon-status rs-status-ok"></div>
@@ -383,7 +383,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td class="rs-table-icon-list">
+            <td class="rs-table-status-list">
               <ul class="rs-status-list">
                 <li class="rs-status-list-item">
                   <div class="rs-icon-status rs-status-ok"></div>
@@ -441,7 +441,7 @@
             <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td class="rs-table-icon-list">
+            <td class="rs-table-status-list">
               <ul class="rs-status-list">
                 <li class="rs-status-list-item">
                   <div class="rs-icon-status rs-status-ok"></div>
@@ -499,7 +499,7 @@
             <td>Body</td>
             <td>Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td class="rs-table-icon-list">
+            <td class="rs-table-status-list">
               <ul class="rs-status-list">
                 <li class="rs-status-list-item">
                   <div class="rs-icon-status rs-status-ok"></div>
@@ -557,7 +557,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td class="rs-table-icon-list">
+            <td class="rs-table-status-list">
               <ul class="rs-status-list">
                 <li class="rs-status-list-item">
                   <div class="rs-icon-status rs-status-ok"></div>
