adding variable width labels and keys to forms

--- a/examples/screenshots/form-horizontal.html
+++ b/examples/screenshots/form-horizontal.html
@@ -81,6 +81,39 @@
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
       </div>
     </fieldset>
+    <fieldset>
+      <legend>Variable Width Labels &amp; Controls</legend>
+      <div class="rs-control-group rs-control-group">
+        <label class="rs-control-label">Default</label>
+        <div class="rs-controls">
+          <input type="text">
+        </div>
+      </div>
+      <div class="rs-control-group rs-control-group-small">
+        <label class="rs-control-label">Small</label>
+        <div class="rs-controls">
+          <input type="text">
+        </div>
+      </div>
+      <div class="rs-control-group rs-control-group-medium">
+        <label class="rs-control-label">Medium</label>
+        <div class="rs-controls">
+          <input type="text">
+        </div>
+      </div>
+      <div class="rs-control-group rs-control-group-large">
+        <label class="rs-control-label">Large</label>
+        <div class="rs-controls">
+          <input type="text">
+        </div>
+      </div>
+      <div class="rs-control-group rs-control-group-xlarge">
+        <label class="rs-control-label">XLarge</label>
+        <div class="rs-controls">
+          <input type="text">
+        </div>
+      </div>
+    </fieldset>
   </form>
 </body>
 </html>
