--- a/examples/screenshots/form-create.html
+++ b/examples/screenshots/form-create.html
@@ -146,6 +146,82 @@
         </div>
       </div>
     </fieldset>
+    <fieldset>
+      <legend>Variable Width Labels &amp; Controls</legend>
+      <div class="rs-control-group rs-control-group">
+        <label class="rs-control-label">Default</label>
+        <div class="rs-controls">
+          <input type="text">
+        </div>
+      </div>
+      <div class="rs-control-group rs-control-group-small">
+        <label class="rs-control-label">Small</label>
+        <div class="rs-controls">
+          <input type="text">
+        </div>
+      </div>
+      <div class="rs-control-group rs-control-group-medium">
+        <label class="rs-control-label">Medium</label>
+        <div class="rs-controls">
+          <input type="text">
+        </div>
+      </div>
+      <div class="rs-control-group rs-control-group-large">
+        <label class="rs-control-label">Large</label>
+        <div class="rs-controls">
+          <input type="text">
+        </div>
+      </div>
+      <div class="rs-control-group rs-control-group-xlarge">
+        <label class="rs-control-label">XLarge</label>
+        <div class="rs-controls">
+          <input type="text">
+        </div>
+      </div>
+    </fieldset>
+    <fieldset>
+      <legend>Variable Width Keys &amp; Values</legend>
+      <div class="rs-detail-item">
+        <label class="rs-detail-key">Default</label>
+        <div class="rs-detail-value">
+          <span class="rs-quiet">Not Configured</span>
+          <span class="rs-key-divider"></span>
+          <a href="#">Select Item&hellip;</a>
+        </div>
+      </div>
+      <div class="rs-detail-item rs-detail-item-small">
+        <label class="rs-detail-key">Small</label>
+        <div class="rs-detail-value">
+          <span class="rs-quiet">Not Configured</span>
+          <span class="rs-key-divider"></span>
+          <a href="#">Select Item&hellip;</a>
+        </div>
+      </div>
+      <div class="rs-detail-item rs-detail-item-medium">
+        <label class="rs-detail-key">Medium</label>
+        <div class="rs-detail-value">
+          <span class="rs-quiet">Not Configured</span>
+          <span class="rs-key-divider"></span>
+          <a href="#">Select Item&hellip;</a>
+        </div>
+      </div>
+      <div class="rs-detail-item rs-detail-item-large">
+        <label class="rs-detail-key">Large</label>
+        <div class="rs-detail-value">
+          <span class="rs-quiet">Not Configured</span>
+          <span class="rs-key-divider"></span>
+          <a href="#">Select Item&hellip;</a>
+        </div>
+      </div>
+      <div class="rs-detail-item rs-detail-item-xlarge">
+        <label class="rs-detail-key">XLarge</label>
+        <div class="rs-detail-value">
+          <span class="rs-quiet">Not Configured</span>
+          <span class="rs-key-divider"></span>
+          <a href="#">Select Item&hellip;</a>
+        </div>
+      </div>
+    </fieldset>
   </form>
 </body>
 </html>
