updating examples and screenshots

--- a/examples/screenshots/create-view.html
+++ b/examples/screenshots/create-view.html
@@ -20,14 +20,14 @@
         </div>
         <div class="rs-detail-section-body">
           <fieldset>
-            <div class="rs-control-group">
+            <div class="rs-control-group rs-control-group-xlarge">
               <label class="rs-control-label">One is a really long label that wraps, but Canon still works</label>
               <div class="rs-controls">
                 <input type="text">
                 <span class="rs-help-inline">This is inline help text.</span>
               </div>
             </div>
-            <div class="rs-control-group success">
+            <div class="rs-control-group rs-control-group-xlarge success">
               <label class="rs-control-label">Two</label>
               <div class="rs-controls">
                 <select>
@@ -37,7 +37,7 @@
                 <span class="rs-validation-inline"><i class="rs-validation-indicator"></i>Everything works!</span>
               </div>
             </div>
-            <div class="rs-control-group error">
+            <div class="rs-control-group rs-control-group-xlarge error">
               <label class="rs-control-label">Three</label>
               <div class="rs-controls">
                 <label class="rs-radio">
@@ -53,14 +53,14 @@
                 <span class="rs-validation-block"><i class="rs-validation-indicator"></i>You should at least select one item.</span>
               </div>
             </div>
-            <div class="rs-control-group">
+            <div class="rs-control-group rs-control-group-xlarge">
               <label class="rs-control-label">Four</label>
               <div class="rs-controls">
                 <input type="text"> GB
                 <span class="rs-help-block">This is some subtext.</span>
               </div>
             </div>
-            <div class="rs-control-group">
+            <div class="rs-control-group rs-control-group-xlarge">
               <label class="rs-control-label">Five</label>
               <div class="rs-controls">
                 <input type="text">
@@ -70,17 +70,17 @@
                 </select>
               </div>
             </div>
-            <div class="rs-control-group">
+            <div class="rs-control-group rs-control-group-xlarge">
               <label class="rs-control-label">Six</label>
               <div class="rs-controls">
                 <textarea></textarea>
               </div>
             </div>
-            <div class="rs-control-group">
+            <div class="rs-control-group rs-control-group-xlarge">
               <label class="rs-control-label">Seven</label>
               <div class="rs-controls-static">Text Content <button class="rs-edit"></button></div>
             </div>
-            <div class="rs-control-group error">
+            <div class="rs-control-group rs-control-group-xlarge error">
               <span class="rs-validation-block"><i class="rs-validation-indicator"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -97,7 +97,7 @@
         </div>
         <div class="rs-detail-section-body">
           <fieldset>
-            <div class="rs-detail-item">
+            <div class="rs-detail-item rs-detail-item-xlarge">
               <label class="rs-detail-key">Configuration One</label>
               <div class="rs-detail-value">
                 <span class="rs-quiet">Not Configured</span>
@@ -105,7 +105,7 @@
                 <a href="#">Select Item&hellip;</a>
               </div>
             </div>
-            <div class="rs-detail-item">
+            <div class="rs-detail-item rs-detail-item-xlarge">
               <label class="rs-detail-key">Configuration Two</label>
               <div class="rs-detail-value">
                 Configured Item
@@ -113,7 +113,7 @@
                 <a href="#">Select Item&hellip;</a>
               </div>
             </div>
-            <div class="rs-detail-item success">
+            <div class="rs-detail-item rs-detail-item-xlarge success">
               <label class="rs-detail-key">Configuration Three</label>
               <div class="rs-detail-value">
                 Configured Item
@@ -122,7 +122,7 @@
                 <span class="rs-validation-inline"><i class="rs-validation-indicator"></i>Everything works!</span>
               </div>
             </div>
-            <div class="rs-detail-item error">
+            <div class="rs-detail-item rs-detail-item-xlarge error">
               <label class="rs-detail-key">Configuration Four</label>
               <div class="rs-detail-value">
                 <span class="rs-quiet">Not Configured</span>
