--- a/examples/screenshots/form-create.html
+++ b/examples/screenshots/form-create.html
@@ -111,7 +111,7 @@
     </fieldset>
     <fieldset>
       <legend>Create Form - Key Value</legend>
-      <div class="rs-detail-item">
+      <div class="rs-detail-item rs-detail-item-large">
         <label class="rs-detail-key">Configuration One</label>
         <div class="rs-detail-value">
           <span class="rs-quiet">Not Configured</span>
@@ -119,7 +119,7 @@
           <a href="#">Select Item&hellip;</a>
         </div>
       </div>
-      <div class="rs-detail-item">
+      <div class="rs-detail-item rs-detail-item-large">
         <label class="rs-detail-key">Configuration Two</label>
         <div class="rs-detail-value">
           Configured Item
@@ -127,7 +127,7 @@
           <a href="#">Select Item&hellip;</a>
         </div>
       </div>
-      <div class="rs-detail-item success">
+      <div class="rs-detail-item rs-detail-item-large success">
         <label class="rs-detail-key">Configuration Three</label>
         <div class="rs-detail-value">
           Configured Item
@@ -136,7 +136,7 @@
           <span class="rs-validation-inline"><i class="rs-validation-indicator"></i>Everything works!</span>
         </div>
       </div>
-      <div class="rs-detail-item error">
+      <div class="rs-detail-item rs-detail-item-large error">
         <label class="rs-detail-key">Configuration Four</label>
         <div class="rs-detail-value">
           <span class="rs-quiet">Not Configured</span>
@@ -148,8 +148,8 @@
     </fieldset>
     <fieldset>
       <legend>Variable Width Labels &amp; Controls</legend>
-      <div class="rs-control-group rs-control-group">
-        <label class="rs-control-label">Default</label>
+      <div class="rs-control-group rs-control-group-xsmall">
+        <label class="rs-control-label">XSmall</label>
         <div class="rs-controls">
           <input type="text">
         </div>
@@ -178,11 +178,17 @@
           <input type="text">
         </div>
       </div>
+      <div class="rs-control-group rs-control-group-xxlarge">
+        <label class="rs-control-label">XXLarge</label>
+        <div class="rs-controls">
+          <input type="text">
+        </div>
+      </div>
     </fieldset>
     <fieldset>
       <legend>Variable Width Keys &amp; Values</legend>
-      <div class="rs-detail-item">
-        <label class="rs-detail-key">Default</label>
+      <div class="rs-detail-item rs-detail-item-xsmall">
+        <label class="rs-detail-key">Small</label>
         <div class="rs-detail-value">
           <span class="rs-quiet">Not Configured</span>
           <span class="rs-key-divider"></span>
@@ -215,6 +221,14 @@
       </div>
       <div class="rs-detail-item rs-detail-item-xlarge">
         <label class="rs-detail-key">XLarge</label>
+        <div class="rs-detail-value">
+          <span class="rs-quiet">Not Configured</span>
+          <span class="rs-key-divider"></span>
+          <a href="#">Select Item&hellip;</a>
+        </div>
+      </div>
+      <div class="rs-detail-item rs-detail-item-xxlarge">
+        <label class="rs-detail-key">XXLarge</label>
         <div class="rs-detail-value">
           <span class="rs-quiet">Not Configured</span>
           <span class="rs-key-divider"></span>
